[package]
name = 'pallet-chainbridge-utils'
version = '0.1.0'
authors = ['andrey@social.network']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive'] }
serde = { version = '1.0.114', optional = true }

chainbridge = { version = '0.0.2', default-features = false, path = '../chainbridge' }
frame-support = { version = '2.0.0', default-features = false, path = '../support' }
frame-system = { version = '2.0.0', default-features = false, path = '../system' }
sp-std = { version = '2.0.0', default-features = false, path = '../../primitives/std' }
sp-runtime = { version = '2.0.0', default-features = false, path = '../../primitives/runtime' }
sp-io = { version = '2.0.0', default-features = false, path = '../../primitives/io' }
sp-core = { version = '2.0.0', default-features = false, path = '../../primitives/core' }
sp-arithmetic = { version = '2.0.0', default-features = false, path = '../../primitives/arithmetic' }

[dev-dependencies]
pallet-balances = { version = '2.0.0', default-features = false, path = '../balances' }

[build-dependencies]
wasm-builder-runner = { version = '2.0.0', package = 'substrate-wasm-builder-runner' }
[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'sp-std/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-core/std',
	'sp-arithmetic/std',
	'frame-support/std',
	'frame-system/std',
	'chainbridge/std',
]
