[package]
name = "pallet-did"
version = '2.0.0'
description = 'Substrate Decentralized ID Pallet'
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
repository = 'https://github.com/paritytech/substrate/'
license = 'Unlicense'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.114'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
path = "../../primitives/runtime"
version = '3.0.0'

[dependencies.frame-support]
default-features = false
path = "../../frame/support"
version = '3.0.0'

[dependencies.frame-system]
default-features = false
path = "../../frame/system"
version = '3.0.0'

[dependencies.sp-io]
default-features = false
path = "../../primitives/io"
version = '3.0.0'

[dependencies.sp-std]
default-features = false
path = "../../primitives/std"
version = '3.0.0'

[dependencies.pallet-timestamp]
default_features = false
path = "../../frame/timestamp"
version = '3.0.0'

[dependencies.sp-core]
default-features = false
path = "../../primitives/core"
version = '3.0.0'

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'frame-system/std',
	'pallet-timestamp/std',
]
