[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = 'FRAME pallet to manage validator registry.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'pallet-social-champions'
repository = 'https://github.com/social-network/network/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0', path = '../support' }
frame-system = { default-features = false, version = '2.0.0', path = '../system' }
pallet-social-tokens = { default-features = false, version = '0.1.0', path = '../social-tokens' }
sp-runtime = { default-features = false, version = '2.0.0', path = '../../primitives/runtime' }
sp-std = { default-features = false, version = '2.0.0', path = '../../primitives/std' }

[dev-dependencies]
pallet-social-tokens = { default-features = false, version = '0.1.0', path = '../social-tokens' }
sp-core = { default-features = false, version = '2.0.0', path = '../../primitives/core' }
sp-io = { default-features = false, version = '2.0.0', path = '../../primitives/io' }
sp-runtime = { default-features = false, version = '2.0.0', path = '../../primitives/runtime' }
sp-std = { default-features = false, version = '2.0.0', path = '../../primitives/std' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
