[package]
authors = ["Social Technologies <sangoku@social.network>"]
description = 'FRAME pallet to manage the Social DAOs.'
edition = '2021'
homepage = 'https://social.network'
license = 'Apache-2.0'
name = 'pallet-social-dao'
repository = 'https://github.com/social-network/v3/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-support = { default-features = false, version = '3.0.0', path = '../support' }
frame-system = { default-features = false, version = '3.0.0', path = '../system' }
pallet-social-tokens = { default-features = false, version = '0.1.0', path = '../social-tokens' }
pallet-treasury = { default-features = false, version = '3.0.0', path = '../treasury' }
pallet-staking = { default-features = false, version = '3.0.0', path = '../staking' }
pallet-social-validators = { default-features = false, version = '0.1.0', path = '../social-validators' }
sp-runtime = { default-features = false, version = '3.0.0', path = '../../primitives/runtime' }
sp-std = { default-features = false, version = '3.0.0', path = '../../primitives/std' }

[dev-dependencies]
pallet-balances = { default-features = false, version = '3.0.0', path = '../balances' }
pallet-social-tokens = { default-features = false, version = '0.1.0', path = '../social-tokens' }
pallet-offences = { default-features = false, version = '3.0.0', path = '../offences' }
pallet-timestamp = { default-features = false, version = '3.0.0', path = '../timestamp' }
pallet-treasury = { default-features = false, version = '3.0.0', path = '../treasury' }
pallet-session = { default-features = false, version = '3.0.0', path = '../session' }
pallet-staking = { default-features = false, version = '3.0.0', path = '../staking' }
pallet-staking-reward-curve = { version = '3.0.0',  path = "../staking/reward-curve" }
pallet-social-validators = { default-features = false, version = '0.1.0', path = '../social-validators' }
sp-core = { default-features = false, version = '3.0.0', path = '../../primitives/core' }
sp-io = { default-features = false, version = '3.0.0', path = '../../primitives/io' }
sp-runtime = { default-features = false, version = '3.0.0', path = '../../primitives/runtime' }
sp-staking = { version = '3.0.0', default-features = false, path = "../../primitives/staking" }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-treasury/std',
    'pallet-staking/std',
]
