[package]
name = "pallet-social-dex"
version = "0.1.0"
authors = ["San Goku <sangoku@social.network>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }

frame-support = { default-features = false, version = '3.0.0', path = '../support' }
frame-system = { default-features = false, version = '3.0.0', path = '../system' }
sp-application-crypto = { default-features = false, version = '3.0.0', path = '../../primitives/application-crypto' }
sp-std = { default-features = false, version = '3.0.0', path = '../../primitives/std' }
sp-io = { default-features = false, version = '3.0.0', path = '../../primitives/io' }
sp-runtime = { default-features = false, version = '3.0.0', path = '../../primitives/runtime' }
sp-core = { default-features = false, version = '3.0.0', path = '../../primitives/core' }
pallet-timestamp = { default-features = false, version = '3.0.0', path = '../timestamp' }
pallet-assets = { default-features = false, version = '3.0.0', path = '../assets' }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-application-crypto/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'sp-std/std',
    'sp-core/std',
    'sp-runtime/std',
    'pallet-timestamp/std',
    'pallet-assets/std',
]
