[package]
name = "pallet-social-network-dao"
version = "3.0.0"
authors = ["Social Technologies <sangoku@social.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://social.network"
repository = "https://github.com/social-network/v3/"
description = "FRAME Social Network DAO pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
frame-support = { version = "3.0.0", default-features = false, path = "../support" }
frame-system = { version = "3.0.0", default-features = false, path = "../system" }
pallet-assets = { version = "3.0.0", default-features = false, path = "../assets" }
pallet-staking = { version = "3.0.0", default-features = false, path = "../staking" }
pallet-social-guardians = { version = "0.1.0", default-features = false, path = "../social-guardians" }
rand_chacha = { version = "0.2", default-features = false }
impl-trait-for-tuples = "0.2.1"

[dev-dependencies]
sp-core = { version = "3.0.0", path = "../../primitives/core" }
sp-io ={ version = "3.0.0", path = "../../primitives/io" }
pallet-balances = { version = "3.0.0", path = "../balances" }
pallet-session = { default-features = false, version = "3.0.0", path = "../session" }
pallet-staking-reward-curve = { version = "3.0.0", path = "../staking/reward-curve" }
pallet-timestamp = { default-features = false, version = "3.0.0", path = "../timestamp" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-runtime/std",
	"rand_chacha/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-social-guardians/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
