[package]
authors = ["Social Technologies <developers@social.network>"]
description = 'FRAME pallet to manage the social network database.'
edition = '2018'
homepage = 'https://social.network'
license = 'Apache-2.0'
name = 'pallet-social-network-db'
repository = 'https://github.com/social-network/v3/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-support = { default-features = false, version = '3.0.0', path = '../support' }
frame-system = { default-features = false, version = '3.0.0', path = '../system' }
sp-runtime = { default-features = false, version = '3.0.0', path = '../../primitives/runtime' }
sp-std = { default-features = false, version = '3.0.0', path = '../../primitives/std' }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0', path = '../../primitives/core' }
sp-io = { default-features = false, version = '3.0.0', path = '../../primitives/io' }
sp-runtime = { default-features = false, version = '3.0.0', path = '../../primitives/runtime' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'serde',
]
