[package]
authors = ['Mark Henderson <https://github.com/aphelionz>']
description = 'FRAME pallet for maintaining OrbitDB manifests.'
edition = '2018'
homepage = 'https://social.network'
license = 'Unlicense'
name = 'pallet-social-orbit-db-manifests'
readme = 'README.md'
repository = 'https://github.com/orbitdb/pallet-orbitdb-manifests'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { version = "3.0.0", default-features = false, path = "../system" }
frame-support = { version = "3.0.0", default-features = false, path = "../support" }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
sp-std = { default-features = false, version = '3.0.0' }
pallet-assets = { version = '3.0.0', path = "../assets", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119", default-features = false }
sp-io = { version = "3.0.0", path = "../../primitives/io", default-features = false }
sp-core = { path = "../../primitives/core", default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
