[package]
name = "pallet-social-swap"
version = "0.1.0"
authors = ["hammeWang <dsw0602@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }

frame-support = { default-features = false, version = '3.0.0', path = '../support' }
frame-system = { default-features = false, version = '3.0.0', path = '../system' }
sp-application-crypto = { default-features = false, version = '3.0.0', path = '../../primitives/application-crypto' }
sp-std = { default-features = false, version = '3.0.0', path = '../../primitives/std' }
sp-io = { default-features = false, version = '3.0.0', path = '../../primitives/io' }
sp-runtime = { default-features = false, version = '3.0.0', path = '../../primitives/runtime' }
sp-core = { default-features = false, version = '3.0.0', path = '../../primitives/core' }
pallet-assets = { default-features = false, version = '3.0.0', path = '../assets' }


[dev-dependencies]
serde = "1.0.101"
pallet-balances = {version = '3.0.0', path = '../balances' }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-application-crypto/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'sp-std/std',
    'sp-core/std',
    'sp-runtime/std',
    'pallet-assets/std',
]
